fix unused-but-set-variable warnings in WebCore https://bugs.webkit.org/show_bug.cgi?id=70344

Reviewed by Adam Barth.

This is a new compiler warning in gcc 4.6.

* bindings/v8/V8DOMWrapper.cpp:
(WebCore::V8DOMWrapper::isWrapperOfType):
* platform/graphics/chromium/ComplexTextControllerLinux.cpp:
(WebCore::ComplexTextController::normalizeSpacesAndMirrorChars):


Canonical link: https://commits.webkit.org/86513@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@97796 268f45cc-cd09-0410-ab3c-d52691b4dbfc